; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_mach.c_fpm_trace_get_long.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_mach.c_fpm_trace_get_long.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fpm_pagesize = common dso_local global i64 0, align 8
@target_page_base = common dso_local global i64 0, align 8
@local_page = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpm_trace_get_long(i64 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @fpm_pagesize, align 8
  %10 = urem i64 %8, %9
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* %6, align 8
  %13 = sub i64 %11, %12
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @target_page_base, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %2
  %18 = call i32 (...) @fpm_mach_vm_deallocate()
  %19 = load i64, i64* %7, align 8
  %20 = call i64 @fpm_mach_vm_read_page(i64 %19)
  %21 = icmp sgt i64 0, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 -1, i32* %3, align 4
  br label %31

23:                                               ; preds = %17
  br label %24

24:                                               ; preds = %23, %2
  %25 = load i64, i64* @local_page, align 8
  %26 = load i64, i64* %6, align 8
  %27 = add i64 %25, %26
  %28 = inttoptr i64 %27 to i64*
  %29 = load i64, i64* %28, align 8
  %30 = load i64*, i64** %5, align 8
  store i64 %29, i64* %30, align 8
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %24, %22
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @fpm_mach_vm_deallocate(...) #1

declare dso_local i64 @fpm_mach_vm_read_page(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
